--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background: #2c6e49;
+    background: #f80109;
     color: #fff;
   }
   
@@ -59,7 +59,7 @@
   .card .btn {
     margin: 1rem auto;
     padding: 0.5rem 1rem;
-    background: #2c6e49;
+    background: #f80101;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
